# red-cli

./: CHANGELOG.md  README.md  pyproject.toml
docs/: architecture.md
src/red/: __init__.py  api.py  auth.py  cli.py  config.py  models.py  overview.py  utils.py
src/red/application/: __init__.py
src/red/application/dto/: __init__.py  overview.py
src/red/application/services/: __init__.py  auth_service.py  issue_service.py  overview_service.py
src/red/cli/: __init__.py  __main__.py  app.py  main.py
src/red/cli/commands/: __init__.py  auth.py  create_issue.py  hours.py  issues.py  overview.py
src/red/cli/presenters/: __init__.py  formatters.py  spinner.py  symbols.py
src/red/domain/: __init__.py  exceptions.py  models.py  utils.py
src/red/infrastructure/: __init__.py
src/red/infrastructure/auth/: __init__.py  authenticator.py
src/red/infrastructure/config/: __init__.py  repository.py
src/red/infrastructure/redmine/: __init__.py  client.py
src/red/settings/: __init__.py  env.py
