[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "red"
version = "0.1.0"
description = "Red — simple example CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [{name="Your Name", email="you@example.com"}]
requires-python = ">=3.8"
dependencies = ["click>=8.0"]

[project.scripts]
# this makes `red` call red.cli:main when installed
red = "red.cli:main"
